---
source: src/ascot_device/mod.rs
expression: ascot_devices
---
- name: MethodsDevice
  mandatory_actions:
    Methods:
      - name: first_action
        hazards:
          - PowerOutage
      - name: second_action
        hazards:
          - FireHazard
          - SpoiledFood
      - name: third_action
        hazards: []
  allowed_hazards:
    - FireHazard
    - PowerOutage
    - SpoiledFood
- name: NewDevice
  mandatory_actions:
    New:
      0:
        name: first_action
        hazards:
          - FireHazard
      1:
        name: second_action
        hazards:
          - ElectricEnergyConsumption
          - FireHazard
      2:
        name: third_action
        hazards: []
  allowed_hazards:
    - ElectricEnergyConsumption
    - FireHazard
